tested addition of amino acids

--- a/Production Rate Overview.ipynb
+++ b/Production Rate Overview.ipynb
@@ -116,10 +116,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Reaction psiK2 at 0x282f3250278>,\n",
-       " <Reaction psiM2 at 0x282f32506a0>,\n",
-       " <Reaction pho at 0x282f3250630>,\n",
-       " <Reaction psitpp at 0x282f3250358>]"
+       "[<Reaction psiK2 at 0x23f35120588>,\n",
+       " <Reaction psiM2 at 0x23f351202b0>,\n",
+       " <Reaction pho at 0x23f35120208>,\n",
+       " <Reaction psitpp at 0x23f35120550>]"
       ]
      },
      "execution_count": 8,
@@ -555,7 +555,7 @@
        "                <td><strong>Name</strong></td><td>L_tryptophan reversible transport via proton symport</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0282f3429eb8</td>\n",
+       "                <td>0x023f352f7ef0</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -573,7 +573,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction TRPt2rpp at 0x282f3429eb8>"
+       "<Reaction TRPt2rpp at 0x23f352f7ef0>"
       ]
      },
      "execution_count": 22,
@@ -622,7 +622,7 @@
        "                <td><strong>Name</strong></td><td></td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0282f32506a0</td>\n",
+       "                <td>0x023f351202b0</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -640,7 +640,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction psiM2 at 0x282f32506a0>"
+       "<Reaction psiM2 at 0x23f351202b0>"
       ]
      },
      "execution_count": 24,
@@ -759,7 +759,7 @@
        "                <td><strong>Name</strong></td><td>tryptophan synthase (indoleglycerol phosphate)</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0282f3555be0</td>\n",
+       "                <td>0x023f35426c18</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -777,7 +777,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction TRPS1 at 0x282f3555be0>"
+       "<Reaction TRPS1 at 0x23f35426c18>"
       ]
      },
      "execution_count": 27,
@@ -808,7 +808,7 @@
        "                <td><strong>Name</strong></td><td>L_tryptophan reversible transport via proton symport</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0282f3429eb8</td>\n",
+       "                <td>0x023f352f7ef0</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -826,7 +826,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction TRPt2rpp at 0x282f3429eb8>"
+       "<Reaction TRPt2rpp at 0x23f352f7ef0>"
       ]
      },
      "execution_count": 28,
@@ -850,7 +850,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "4895f043",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -868,43 +870,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84142ba2",
+   "cell_type": "markdown",
+   "id": "48e9d528",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Adding amino acids"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9e5f94a3",
-   "metadata": {},
+   "id": "41ffcc5d",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Metabolite identifier</strong></td><td>psi_c</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>Psilocybin</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0282f3243e10</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Formula</strong></td><td>C12H17N2O4P</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Compartment</strong></td><td>c</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>In 4 reaction(s)</strong></td><td>\n",
-       "                    psiM2, pho, psitpp, psiK2</td>\n",
-       "            </tr>\n",
-       "        </table>"
-      ],
       "text/plain": [
-       "<Metabolite psi_c at 0x282f3243e10>"
+       "[<Metabolite ala_B_c at 0x23f34ad8438>,\n",
+       " <Metabolite ala_B_e at 0x23f34ad84e0>,\n",
+       " <Metabolite ala_D_c at 0x23f34ad85f8>,\n",
+       " <Metabolite ala_D_e at 0x23f34ad86a0>,\n",
+       " <Metabolite ala_L_c at 0x23f34ad8748>,\n",
+       " <Metabolite ala_L_e at 0x23f34ad87f0>]"
       ]
      },
      "execution_count": 30,
@@ -913,14 +902,16 @@
     }
    ],
    "source": [
-    "model.metabolites.psi_c"
+    "model.metabolites.query('Alanine','name')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b3333621",
-   "metadata": {},
+   "id": "f7fbafc4",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -928,30 +919,30 @@
        "\n",
        "        <table>\n",
        "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>psiM2</td>\n",
+       "                <td><strong>Reaction identifier</strong></td><td>EX_ala_L_e</td>\n",
        "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td></td>\n",
+       "                <td><strong>Name</strong></td><td>L_Alanine exchange</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0282f32506a0</td>\n",
+       "                <td>0x023f34f98f98</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
-       "                    <p style='text-align:right'>amet_c + baecyst_c --> ahcys_c + psi_c</p>\n",
-       "                    <p style='text-align:right'>S-AdenosyL_L_methionine + Baeocystin --> S-AdenosyL_L_homocysteine + Psilocybin</p>\n",
+       "                    <p style='text-align:right'>ala_L_e <=></p>\n",
+       "                    <p style='text-align:right'>L_Alanine <=></p>\n",
        "                </td>\n",
        "            </tr><tr>\n",
        "                <td><strong>GPR</strong></td><td></td>\n",
        "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>0.0</td>\n",
+       "                <td><strong>Lower bound</strong></td><td>-1000</td>\n",
        "            </tr><tr>\n",
-       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
+       "                <td><strong>Upper bound</strong></td><td>4.61339666666667</td>\n",
        "            </tr>\n",
        "        </table>\n",
        "        "
       ],
       "text/plain": [
-       "<Reaction psiM2 at 0x282f32506a0>"
+       "<Reaction EX_ala_L_e at 0x23f34f98f98>"
       ]
      },
      "execution_count": 31,
@@ -960,12 +951,190 @@
     }
    ],
    "source": [
-    "model.reactions.psiM2"
+    "model.reactions.EX_ala_L_e #AA format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
+   "id": "3f019573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EX_ala_L_e': 10,\n",
+       " 'EX_arg_L_e': 10,\n",
+       " 'EX_asn_L_e': 10,\n",
+       " 'EX_asp_L_e': 10,\n",
+       " 'EX_ca2_e': 0.0144877134286247,\n",
+       " 'EX_cobalt2_e': 7.00338234344926e-05,\n",
+       " 'EX_cu2_e': 0.00197271722237563,\n",
+       " 'EX_cys_L_e': 10,\n",
+       " 'EX_fe2_e': 0.16239125,\n",
+       " 'EX_fe3_e': 0.0217300637039616,\n",
+       " 'EX_glc_e': 1000,\n",
+       " 'EX_gln_L_e': 10,\n",
+       " 'EX_glu_L_e': 10,\n",
+       " 'EX_gly_e': 10,\n",
+       " 'EX_h_e': 10,\n",
+       " 'EX_his_L_e': 10,\n",
+       " 'EX_ile_L_e': 10,\n",
+       " 'EX_k_e': 0.543285250115532,\n",
+       " 'EX_leu_L_e': 10,\n",
+       " 'EX_lys_L_e': 10,\n",
+       " 'EX_met_L_e': 10,\n",
+       " 'EX_mg2_e': 0.0241459221505149,\n",
+       " 'EX_mn2_e': 0.00192443552016793,\n",
+       " 'EX_nh4_e': 7,\n",
+       " 'EX_ni2_e': 0.00089824250292982,\n",
+       " 'EX_o2_e': 7,\n",
+       " 'EX_phe_L_e': 10,\n",
+       " 'EX_pi_e': 10,\n",
+       " 'EX_pro_L_e': 10,\n",
+       " 'EX_ser_L_e': 10,\n",
+       " 'EX_so4_e': 4.01673156249995,\n",
+       " 'EX_sucr_e': 1000,\n",
+       " 'EX_thr_L_e': 10,\n",
+       " 'EX_trp_L_e': 10,\n",
+       " 'EX_tyr_L_e': 10,\n",
+       " 'EX_val_L_e': 10,\n",
+       " 'EX_zn2_e': 0.000948926279874219,\n",
+       " 'EX_BIOTIN': 1.01925397503027e-06,\n",
+       " 'EX_cl': 0.0144877134286247,\n",
+       " 'EX_psi_e': 1000.0}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medium = model.medium\n",
+    "medium[\"EX_ala_L_e\"] = 10\n",
+    "medium[\"EX_arg_L_e\"] = 10\n",
+    "medium[\"EX_asn_L_e\"] = 10\n",
+    "medium[\"EX_asp_L_e\"] = 10\n",
+    "medium[\"EX_cys_L_e\"] = 10\n",
+    "medium[\"EX_gln_L_e\"] = 10\n",
+    "medium[\"EX_glu_L_e\"] = 10\n",
+    "medium[\"EX_gly_e\"] = 10\n",
+    "medium[\"EX_his_L_e\"] = 10\n",
+    "medium[\"EX_ile_L_e\"] = 10\n",
+    "medium[\"EX_leu_L_e\"] = 10\n",
+    "medium[\"EX_lys_L_e\"] = 10\n",
+    "medium[\"EX_met_L_e\"] = 10\n",
+    "medium[\"EX_phe_L_e\"] = 10\n",
+    "medium[\"EX_pro_L_e\"] = 10\n",
+    "medium[\"EX_ser_L_e\"] = 10\n",
+    "medium[\"EX_thr_L_e\"] = 10\n",
+    "medium[\"EX_trp_L_e\"] = 10\n",
+    "medium[\"EX_tyr_L_e\"] = 10\n",
+    "medium[\"EX_val_L_e\"] = 10\n",
+    "#these didn't actually seem to help at all\n",
+    "\n",
+    "medium[\"EX_pi_e\"] = 10\n",
+    "medium[\"EX_h_e\"] = 10\n",
+    "medium[\"EX_h_e\"] = 10\n",
+    "medium[\"EX_h_e\"] = 10\n",
+    "\n",
+    "medium[\"EX_o2_e\"] = 7\n",
+    "medium[\"EX_nh4_e\"] = 7\n",
+    "\n",
+    "model.medium = medium\n",
+    "\n",
+    "model.medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "11a06826",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "every reaction going toward psilocybin\n",
+      "Max. psi production [mmol gDW^-1 h^-1]: 4.365741867082851e-05\n",
+      "Is there glucose uptake? -4.220371165592363\n",
+      "Is there growth? 0.1\n",
+      "tryptamine [mmol gDW^-1 h^-1]: 0.096979888828\n",
+      "4-Hydroxytryptamine [mmol gDW^-1 h^-1]: 4.365741867082851e-05\n",
+      "norbaeocystin [mmol gDW^-1 h^-1]: 4.365741867082851e-05\n",
+      "baeocystin [mmol gDW^-1 h^-1]: 4.365741867082851e-05\n",
+      "psilocybin [mmol gDW^-1 h^-1]: 4.365741867082851e-05\n",
+      "pho [mmol gDW^-1 h^-1]: 0.0\n",
+      "restore [mmol gDW^-1 h^-1]: 0.0\n",
+      "transport [mmol gDW^-1 h^-1]: 4.365741867082851e-05\n",
+      "out [mmol gDW^-1 h^-1]: 4.365741867082851e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "with model:\n",
+    "    model.objective = target\n",
+    "    print(\"every reaction going toward psilocybin\")\n",
+    "    \n",
+    "    print(\"Max. psi production [mmol gDW^-1 h^-1]:\",model.optimize().objective_value)\n",
+    "    \n",
+    "    print(\"Is there glucose uptake?\",model.reactions.EX_glc_e.flux)\n",
+    "    print(\"Is there growth?\",model.reactions.CG_biomass_cgl_ATCC13032.flux)\n",
+    "    \n",
+    "    print(\"tryptamine [mmol gDW^-1 h^-1]:\",model.reactions.CrTdc.flux)\n",
+    "    print(\"4-Hydroxytryptamine [mmol gDW^-1 h^-1]:\",model.reactions.psiH.flux)\n",
+    "    print(\"norbaeocystin [mmol gDW^-1 h^-1]:\",model.reactions.psiK.flux)\n",
+    "    print(\"baeocystin [mmol gDW^-1 h^-1]:\",model.reactions.psiM.flux)\n",
+    "    print(\"psilocybin [mmol gDW^-1 h^-1]:\",model.reactions.psiM2.flux)\n",
+    "    print(\"pho [mmol gDW^-1 h^-1]:\",model.reactions.pho.flux)\n",
+    "    print(\"restore [mmol gDW^-1 h^-1]:\",model.reactions.psiK2.flux)\n",
+    "    print(\"transport [mmol gDW^-1 h^-1]:\",model.reactions.psitpp.flux)\n",
+    "    print(\"out [mmol gDW^-1 h^-1]:\",target.flux)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "269d59e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "every reaction going from Typtophan\n",
+      "Max. psi production [mmol gDW^-1 h^-1]: 4.365741867082851e-05\n",
+      "TRPTRS [mmol gDW^-1 h^-1]: 0.0\n",
+      "TRPS2 [mmol gDW^-1 h^-1]: 0.0\n",
+      "CrTdc [mmol gDW^-1 h^-1]: 0.096979888828\n",
+      "TRPS1 [mmol gDW^-1 h^-1]: 0.1\n",
+      "TRPt2rpp [mmol gDW^-1 h^-1]: 0.0\n",
+      "TRPabcpp [mmol gDW^-1 h^-1]: 0.0\n",
+      "PROTEIN [mmol gDW^-1 h^-1]: 0.054028\n"
+     ]
+    }
+   ],
+   "source": [
+    "with model:\n",
+    "    model.objective = target\n",
+    "    print(\"every reaction going from Typtophan\")\n",
+    "    \n",
+    "    print(\"Max. psi production [mmol gDW^-1 h^-1]:\",model.optimize().objective_value)\n",
+    "    print(\"TRPTRS [mmol gDW^-1 h^-1]:\",model.reactions.TRPTRS.flux)\n",
+    "    print(\"TRPS2 [mmol gDW^-1 h^-1]:\",model.reactions.TRPS2.flux)\n",
+    "    print(\"CrTdc [mmol gDW^-1 h^-1]:\",model.reactions.CrTdc.flux)\n",
+    "    print(\"TRPS1 [mmol gDW^-1 h^-1]:\",model.reactions.TRPS1.flux)\n",
+    "    print(\"TRPt2rpp [mmol gDW^-1 h^-1]:\",model.reactions.TRPt2rpp.flux)\n",
+    "    print(\"TRPabcpp [mmol gDW^-1 h^-1]:\",model.reactions.TRPabcpp.flux)\n",
+    "    print(\"PROTEIN [mmol gDW^-1 h^-1]:\",model.reactions.PROTEIN.flux)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "facf9c88",
    "metadata": {},
    "outputs": [
