--- a/1. Add_Psilocybin_to_Coynebacterium_Model.ipynb
+++ b/1. Add_Psilocybin_to_Coynebacterium_Model.ipynb
@@ -386,7 +386,7 @@
        "                <td><strong>Name</strong></td><td></td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x01d575a36470</td>\n",
+       "                <td>0x01403d9c2e48</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -404,7 +404,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction psitpp at 0x1d575a36470>"
+       "<Reaction psitpp at 0x1403d9c2e48>"
       ]
      },
      "execution_count": 22,
@@ -443,7 +443,7 @@
        "                <td><strong>Name</strong></td><td>O2</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x01d57545b7b8</td>\n",
+       "                <td>0x01403d343a58</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Formula</strong></td><td>O2</td>\n",
        "            </tr><tr>\n",
@@ -455,7 +455,7 @@
        "        </table>"
       ],
       "text/plain": [
-       "<Metabolite o2_e at 0x1d57545b7b8>"
+       "<Metabolite o2_e at 0x1403d343a58>"
       ]
      },
      "execution_count": 24,
@@ -486,7 +486,7 @@
        "                <td><strong>Name</strong></td><td>o2 transport via diffusion</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x01d5759c4a90</td>\n",
+       "                <td>0x01403d8abcf8</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -504,7 +504,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction O2tpp at 0x1d5759c4a90>"
+       "<Reaction O2tpp at 0x1403d8abcf8>"
       ]
      },
      "execution_count": 25,
@@ -523,7 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_sbml_model(model, \"iCW773_exchangefunction_psilocybin.xml\")"
+    "write_sbml_model(model, \"iCW773_psilocybin.xml\")"
    ]
   },
   {
