numberering files and cleanup

--- a/4._Production_Rate_Overview.ipynb
+++ b/4._Production_Rate_Overview.ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "%run 2021_11_02_Psilocybin_in_Cg_Exchange_Function.ipynb #change model source here"
+    "%run 1._Add_Psilocybin_to_Coynebacterium_Model.ipynb #change model source here"
    ]
   },
   {
@@ -44,28 +44,6 @@
    "outputs": [],
    "source": [
     "target = model.reactions.EX_psi_e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "bda1c6bf",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#model.reactions.EX_psi_e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "cb2511b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model.reactions.EX_psi_e.upper_bound=0"
    ]
   },
   {
