Added comments to the Optgene code

--- a/Rune_working.ipynb
+++ b/Rune_working.ipynb
@@ -2,19 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ee4947e1-7401-45bd-8f2d-2c99f2d3fe04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#importing the read_sbml_model function from cobra\n",
-    "#from cobra.io import read_sbml_model\n",
-    "#make sure model name is up to date!\n",
-    "#model = read_sbml_model('iCW773_test7_psilocybin.xml') #assigning our model to the variable model"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "7c0e2dfd-5933-42d4-a52b-f04fc04fc355",
    "metadata": {},
@@ -332,9 +319,9 @@
    ],
    "source": [
     "import cameo\n",
-    "from cameo.strain_design import OptGene\n",
+    "from cameo.strain_design import OptGene #Imports the optgene packages\n",
     "\n",
-    "%run 2021_11_02_Psilocybin_in_Cg.ipynb"
+    "%run 2021_11_02_Psilocybin_in_Cg.ipynb #Runs our model where we inserted the different reactions and metabolites"
    ]
   },
   {
@@ -344,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optgene = OptGene(model)"
+    "optgene = OptGene(model) #Defining our model"
    ]
   },
   {
@@ -366,7 +353,7 @@
     }
    ],
    "source": [
-    "#finding the biomass reaction\n",
+    "#Finding the biomass reaction\n",
     "model.reactions.query(\"biomass\", \"name\")"
    ]
   },
@@ -579,10 +566,11 @@
     }
    ],
    "source": [
+    "#Runs the Optgene command for the production of Psilocybin with glucose a the substrate\n",
     "result = optgene.run(target=model.reactions.psiM2,\n",
     "                     biomass=model.reactions.CG_biomass_cgl_ATCC13032,\n",
     "                     substrate=model.reactions.EX_glc_e,\n",
-    "                     max_evaluations=100000, population_size=1000, max_knockouts=10,\n",
+    "                     max_evaluations=100000, population_size=1000, max_knockouts=10, #Just to try some extremes, beacuse it did't work anyway\n",
     "                     plot=False, growth_coupled=True)"
    ]
   },
