Ensured Proper Psilocybin Production Pathway

--- a/1._Add_Psilocybin_to_Coynebacterium_Model.ipynb
+++ b/1._Add_Psilocybin_to_Coynebacterium_Model.ipynb
@@ -32,8 +32,7 @@
    ],
    "source": [
     "#Importing the model \"iCW773\"with changed names --> iCW773_test7.xml\n",
-    "model = read_sbml_model('iCW773_test7.xml') #for test file e.g. trp- was replaced by trp_ to enable calling of the metabolite\n",
-    "\n"
+    "model = read_sbml_model('iCW773_test7.xml') #for test file e.g. trp- was replaced by trp_ to enable calling of the metabolite"
    ]
   },
   {
@@ -158,8 +157,7 @@
     "tryptamine = Metabolite(id = 'tryp_c', compartment='c', name='tryptamine', formula='C10H12N2')\n",
     "hydroxytryptamine = Metabolite(id='_4htryp_c', compartment='c', name='4-Hydroxytryptamine', formula='C10H12N2O')\n",
     "norbaeocystin = Metabolite(id='nbc_c' , compartment='c', name='Norbaeocystin', formula='C10H13N2O4P')\n",
-    "psilocybin = Metabolite(id='psi_c', compartment='c', name='Psilocybin', formula='C12H17N2O4P') #This needs later also an _e version\n",
-    "#S_adenosyl_L_methionine = Metabolite(id='SAM', compartment='c', name='S-adenosyl-L-Methionine', formula='C15H22N6O5S')\n",
+    "psilocybin = Metabolite(id='psi_c', compartment='c', name='Psilocybin', formula='C12H17N2O4P')\n",
     "psilocin = Metabolite(id='psii_c', compartment='c', name='psilocin', formula='C12H16N2O')\n",
     "baeocystin = Metabolite(id='baecyst_c', compartment='c', name='Baeocystin', formula='C11H15N2O4P')\n",
     "psilocybin_e = Metabolite(id='psi_e', compartment='e', name='Psilocybin_e', formula='C12H17N2O4P')"
@@ -187,7 +185,7 @@
     "psilocybin_synthase2 = Reaction('psiM2')\n",
     "pho_or_spon = Reaction('pho') # reaction is either spontaneous or carried out by phosphatases\n",
     "_4_hydroxytryptamine_kinase2 = Reaction('psiK2')\n",
-    "psitransportpathway = Reaction('psitpp')"
+    "psitransportpathway = Reaction('psitpp') #remove the psilocybin from the cell, transporter such as PSIT1_PSICU"
    ]
   },
   {
@@ -305,10 +303,8 @@
    "outputs": [],
    "source": [
     "psitransportpathway.add_metabolites(({psilocybin: -1,\n",
-    "                             model.metabolites.h_c: -1, \n",
     "                             psilocybin_e: 1, \n",
-    "                             model.metabolites.pi_c: 1, \n",
-    "                             }))"
+    "                             })) #can be passive transport, https://www.uniprot.org/uniprot/P0DPB1"
    ]
   },
   {
@@ -339,38 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c02fdf58-75a6-45bd-9310-a73246ecfcfd",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
-    "model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
-    "#model.add_boundary(model.metabolites.psi_c, type='demand') #product\n",
-    "model.add_boundary(model.metabolites.psi_e, type='exchange')\n",
-    "model.add_boundary(model.metabolites.amet_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
-    "model.add_boundary(model.metabolites.psii_c, type='demand');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "bffb3d87",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#model.reactions.DM_psi_e.bounds=0,10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "6d26b9f9",
+   "id": "65e3b392",
    "metadata": {
     "scrolled": false
    },
@@ -381,22 +346,22 @@
        "\n",
        "        <table>\n",
        "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>psitpp</td>\n",
+       "                <td><strong>Reaction identifier</strong></td><td>DM_ahcys_c</td>\n",
        "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td></td>\n",
+       "                <td><strong>Name</strong></td><td>S-AdenosyL_L_homocysteine demand</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x01403d9c2e48</td>\n",
+       "                <td>0x0206bb5f44a8</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
-       "                    <p style='text-align:right'>h_c + psi_c --> pi_c + psi_e</p>\n",
-       "                    <p style='text-align:right'>H+ + Psilocybin --> Phosphate + Psilocybin_e</p>\n",
+       "                    <p style='text-align:right'>ahcys_c --></p>\n",
+       "                    <p style='text-align:right'>S-AdenosyL_L_homocysteine --></p>\n",
        "                </td>\n",
        "            </tr><tr>\n",
        "                <td><strong>GPR</strong></td><td></td>\n",
        "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>0.0</td>\n",
+       "                <td><strong>Lower bound</strong></td><td>0</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
        "            </tr>\n",
@@ -404,151 +369,52 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction psitpp at 0x1403d9c2e48>"
+       "<Reaction DM_ahcys_c at 0x206bb5f44a8>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.reactions.psitpp"
+    "#model.add_boundary(model.metabolites.tryp_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites._4htryp_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.nbc_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.psi_c, type='demand') #removed demand function\n",
+    "model.add_boundary(model.metabolites.psi_e, type='exchange') #use exchange function for product instead\n",
+    "#model.add_boundary(model.metabolites.amet_c, type='demand')\n",
+    "model.add_boundary(model.metabolites.ahcys_c, type='demand')\n",
+    "#model.add_boundary(model.metabolites.psii_c, type='demand');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bff351a2",
+   "metadata": {},
+   "source": [
+    "For the production of psilocybin, SAH (amet_c) is produced from SAM (ahcys_c), thus a demand function is necessary. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "51c69ccc",
+   "execution_count": 21,
+   "id": "0821e1df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.reactions.EX_psi_e"
+    "model.reactions.EX_psi_e.bounds = 0,1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ee77f2f9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Metabolite identifier</strong></td><td>o2_e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>O2</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x01403d343a58</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Formula</strong></td><td>O2</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Compartment</strong></td><td>e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>In 2 reaction(s)</strong></td><td>\n",
-       "                    EX_o2_e, O2tpp</td>\n",
-       "            </tr>\n",
-       "        </table>"
-      ],
-      "text/plain": [
-       "<Metabolite o2_e at 0x1403d343a58>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.metabolites.o2_e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "ed4c6bb7",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>O2tpp</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>o2 transport via diffusion</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x01403d8abcf8</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Stoichiometry</strong></td>\n",
-       "                <td>\n",
-       "                    <p style='text-align:right'>o2_e --> o2_c</p>\n",
-       "                    <p style='text-align:right'>O2 --> O2</p>\n",
-       "                </td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>GPR</strong></td><td></td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>1.44076799999993</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Upper bound</strong></td><td>16.5067783333334</td>\n",
-       "            </tr>\n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<Reaction O2tpp at 0x1403d8abcf8>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.reactions.O2tpp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "9c036f33-ec85-4def-9f88-be5107af159a",
    "metadata": {},
    "outputs": [],
    "source": [
     "write_sbml_model(model, \"iCW773_psilocybin.xml\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3974edea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89251599",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96f93d91",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
