--- a/Report.ipynb
+++ b/Report.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Title]"
+    "# Psilocybin production in Corynebacterium Glutamicum"
    ]
   },
   {
@@ -17,8 +17,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 1.1 Literature review of the compound (<500 words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Psilocybin is a prodrug of the psychedelic active drug Psilocin. It is a common compound in many species of fungi and is known as the active ingredient in “magic mushrooms”. Psilocin is an agonist of several of the 5-HT serotonin receptors. These receptors are responsible for sensing the presence and level of serotonin, a neurotransmitter responsible for both many mental functions like mood, learning, the reward system cognition etc., but also some physiological function like vomiting. Psilocybin have shown potential as a treatment for many mental disorders regarding patients’ mood. Significant improvements to patients with depression and to patients with “existential distress”, which some cancer patients can experience during and after treatment, have been have observed after the administration of small doses of Psilocybin. "
    ]
   },
   {
@@ -94,9 +106,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -108,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
