Added report summary

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -97,22 +97,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## 3. *If Project category I:* Reconstruction of a new GSM for your cell factory host of interest (<1500 words)"
+    "## 3. *Project category II:* Selection and assessment of existing GSM (<500 words)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. *If Project category II:* Selection and assessment of existing GSM (<500 words)"
+    "| Organism/Strain | Year published |\n",
+    "| :- |  :-: |\n",
+    "| *A.niger*/ATCC1015 | 2018 |\n",
+    "| *A.niger*/CBS 513.5 | 2018 |"
    ]
   },
   {
